[gd_scene load_steps=15 format=2]

[ext_resource path="res://GCS - SHD/Enemies/Donkey/DonkeyIdle02.png" type="Texture" id=1]
[ext_resource path="res://GCS - SHD/Enemies/Donkey/DonkeyIdle03.png" type="Texture" id=2]
[ext_resource path="res://GCS - SHD/Enemies/Donkey/DonkeyIdle01.png" type="Texture" id=3]
[ext_resource path="res://GCS - SHD/Enemies/Donkey/DonkeyKick06.png" type="Texture" id=4]
[ext_resource path="res://GCS - SHD/Enemies/Donkey/DonkeyKick02.png" type="Texture" id=5]
[ext_resource path="res://GCS - SHD/Enemies/Donkey/DonkeyKick04.png" type="Texture" id=6]
[ext_resource path="res://GCS - SHD/Enemies/Donkey/DonkeyKick03.png" type="Texture" id=7]
[ext_resource path="res://GCS - SHD/Enemies/Donkey/DonkeyKick05.png" type="Texture" id=8]
[ext_resource path="res://GCS - SHD/Enemies/Donkey/DonkeyKick01.png" type="Texture" id=9]
[ext_resource path="res://Enemy Scenes/DonkeyKick.gd" type="Script" id=10]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 9 ), ExtResource( 9 ), ExtResource( 9 ), ExtResource( 9 ), ExtResource( 5 ), ExtResource( 5 ), ExtResource( 5 ), ExtResource( 7 ), ExtResource( 7 ), ExtResource( 7 ), ExtResource( 7 ), ExtResource( 7 ), ExtResource( 7 ), ExtResource( 6 ), ExtResource( 8 ), ExtResource( 8 ), ExtResource( 8 ), ExtResource( 8 ), ExtResource( 8 ), ExtResource( 8 ), ExtResource( 8 ), ExtResource( 8 ), ExtResource( 4 ), ExtResource( 4 ), ExtResource( 7 ), ExtResource( 7 ), ExtResource( 5 ), ExtResource( 5 ), ExtResource( 9 ), ExtResource( 9 ) ],
"loop": true,
"name": "Kicking",
"speed": 20.0
}, {
"frames": [ ExtResource( 3 ), ExtResource( 1 ), ExtResource( 2 ), ExtResource( 1 ) ],
"loop": true,
"name": "Idle",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 34.9537, 112.41 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 61.5625, 74 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 37, 41.25 )

[node name="DonkeyKick" type="RigidBody2D"]
script = ExtResource( 10 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 0.196983, 0.2 )
frames = SubResource( 1 )
animation = "Idle"
frame = 3
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -2.5, 5.5 )
scale = Vector2( 1.38755, 0.422562 )
shape = SubResource( 2 )

[node name="SightZone" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="SightZone"]
position = Vector2( -78, 8 )
shape = SubResource( 3 )

[node name="KickZone" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="KickZone"]
position = Vector2( -43, 5 )
shape = SubResource( 4 )

[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
